# multi-agent-japan

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.js  index.html  landing.html  pyproject.toml  server.py  styles.css
agents/: __init__.py  base.py  budget.py  destination_researcher.py  intent_parser.py  lodging.py  logistics.py  runner.py  validator.py
agents/prompts/: budget.md  destination_researcher.md  intent_parser.md  lodging.md  logistics.md  merge.md  validator.md
app/: __init__.py  conversation.py  demo_data.py  env_check.py  export.py  itinerary_parser.py  itinerary_ui.py  progress.py  speech.py  theme.py  voice_agent.py
docs/: architecture.md  demo-script.md  deployment.md  edgecase.md  evals.yaml  implementation-plan.md  problemstatement.md  project-summary.md  voice-agent.md
docs/assets/: README.md  architecture-diagram.md
examples/canonical-japan/: 00_request.txt  01_travel_brief.json  02_research.json  03_lodging.json  04_logistics.json  05_budget.json  06_draft_itinerary.md  07_validation.json  08_final_itinerary.md  README.md  trace.jsonl
llm/: __init__.py  client.py  rate_limiter.py  schemas.py
orchestrator/: __init__.py  api.py  cli.py  config.py  merge.py  pipeline.py  rate_limits.py  run_state.py
tests/: conftest.py  test_acceptance.py  test_client.py  test_config.py  test_intent_parser.py  test_pipeline_integration.py  test_portfolio.py  test_rate_limits.py  test_schemas.py  test_voice_app.py
tests/fixtures/: budget_plan_canonical.json  draft_itinerary_canonical.md  (+8 more)
